assets/tests/Shaders/compilation_errors/helpers.glsl
int b1;
int error // missing colon
int b2;